--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
