--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
+    "sharp": "^0.32.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
